add deploy workflow

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Currency converter is a convenient service for calculating a cross rate that allows you to quickly and conveniently carry out various currency transfers from one currency to another.",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint *.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
